fix picker page spacing

--- a/frontend/src/components/picker/picker.css
+++ b/frontend/src/components/picker/picker.css
@@ -117,6 +117,7 @@
   flex-direction: column;
   height: 100vh;
   width: 33%;
+  text-align: -webkit-center;
 }
 
  .picker-menu{
@@ -131,24 +132,28 @@
   padding-top: 20px;
   height: 100vh;
   width: 33%;
+  margin: 0 auto;
 }
 
 .top-item{
   align-self: center;
-  margin-left: -50px;
+  /* margin-left: -50px; */
+  text-align: center;
 }
 
 .bottom-item{
   align-self: center;
-  margin-left:30px;
   margin-top: 60px;
+  text-align: center;
 }
 
 .outfit-selector-attributes{
-height: 100vh;
+  height: 100vh;
   width: 33%;
-  
-  
+}
+.outfit-selector-attributes h3:first-child {
+  text-decoration: underline;
+  margin: 0;
 }
 
 .outfit-selector-attributes h3 {
@@ -156,12 +161,18 @@ height: 100vh;
   font-family: 'Timmana', sans-serif;
   font-size: 29px;
   letter-spacing: 2px;
+  text-align: center;
 }
 .outfit-selector-attributes p{
-  color: blue;
- text-align: left;
-   font-family: 'Timmana', sans-serif;
-   font-size: 18px;
+  color: #a2a58e;
+  text-shadow:
+		-1px -1px 0 black,
+		1px -1px 0 black,
+		-1px 1px 0 black,
+    1px 1px 0 black;
+  font-size: 22px;
+  text-align: center;
+  font-family: 'Timmana', sans-serif;
   letter-spacing: 2px;
 }
 
@@ -196,4 +207,5 @@ h2 {
   color: #282a1a;
   font-size: 20px;
   font-family: 'Timmana', sans-serif;
+  text-align: center;
 }
